# rust_web_api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/app/controller/: file_controller.rs  mod.rs  param_controller.rs  test_controller.rs  upload_controller.rs
src/app/lib/: json_res.rs  mod.rs  param.rs
