[package]
name = "rust_web_api"
version = "0.1.0"
authors = ["xcm <840844635@qq.com>"]
edition = "2021"


[dependencies]
hyper = { version = "0.14", features = ["full"] }

tokio = { version = "1", features = ["full"] }

tokio-util = { version = "0.6", features = ["codec"] }

multer = "1.2.2"

futures = "0.3.8"

chrono = "0.4"

log = "0.4.0"
env_logger = "0.8.3"

serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}

url = "2.2"